<?xml version="1.0" encoding="utf-8"?><!--
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
     >
-->

<LinearLayout android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:id="@+id/LinearLayoutRecDisp"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">

        <EditText
            android:id="@+id/editTextRecDisp"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:clickable="false"
            android:editable="false"
            android:gravity="top"
            android:longClickable="false"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/LinearLayoutRecTool"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/ButtonClear"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/qingchu" />

            <RadioGroup
                android:id="@+id/radioGroupOption"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/radioButtonTxt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/txt" />

                <RadioButton
                    android:id="@+id/radioButtonHex"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hex" />
            </RadioGroup>

            <EditText
                android:id="@+id/editTextLines"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="false"
                android:editable="false"
                android:enabled="false"
                android:imeOptions="actionNone"
                android:inputType="number"
                android:longClickable="false"
                android:text="@string/n0">

                <requestFocus />
            </EditText>

            <CheckBox
                android:id="@+id/checkBoxAutoClear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/ziqing" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/LinearLayoutCOMAB"
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1">

        <LinearLayout
            android:id="@+id/LinearLayoutCOMA"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextCOMA"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="top"
                android:imeOptions="actionDone"
                android:singleLine="true" />

            <LinearLayout
                android:id="@+id/LinearLayoutTooLCOMA"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/SpinnerCOMA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:id="@+id/LinearLayoutOption1COMA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <Spinner
                        android:id="@+id/SpinnerBaudRateCOMA"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <ToggleButton
                        android:id="@+id/toggleButtonCOMA"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ToggleButton" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <Spinner
                        android:id="@+id/SpinnerCOMAsjw"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <Spinner
                        android:id="@+id/SpinnerCOMAtzw"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <Spinner
                        android:id="@+id/SpinnerCOMAjyw"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LinearLayoutOption2COMA"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <EditText
                        android:id="@+id/editTextTimeCOMA"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="number"
                        android:text="@string/n500" />

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ms" />

                    <CheckBox
                        android:id="@+id/checkBoxAutoCOMA"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zidong" />

                    <Button
                        android:id="@+id/ButtonSendCOMA"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fasong" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayoutCOMB"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editTextCOMB"
                android:layout_width="match_parent"
                android:layout_height="fill_parent"
                android:layout_weight="1"
                android:gravity="top"
                android:imeOptions="actionDone"
                android:singleLine="true" />

            <LinearLayout
                android:id="@+id/LinearLayoutTooLCOMB"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Spinner
                    android:id="@+id/SpinnerCOMB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

                <LinearLayout
                    android:id="@+id/LinearLayoutOption1COMB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <Spinner
                        android:id="@+id/SpinnerBaudRateCOMB"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <ToggleButton
                        android:id="@+id/ToggleButtonCOMB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ToggleButton" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <Spinner
                        android:id="@+id/SpinnerCOMBsjw"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <Spinner
                        android:id="@+id/SpinnerCOMBtzw"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <Spinner
                        android:id="@+id/SpinnerCOMBjyw"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/LinearLayoutOption2COMB"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <EditText
                        android:id="@+id/editTextTimeCOMB"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="number"
                        android:text="@string/n500" />

                    <TextView
                        android:id="@+id/TextView01"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ms" />

                    <CheckBox
                        android:id="@+id/checkBoxAutoCOMB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/zidong" />

                    <Button
                        android:id="@+id/ButtonSendCOMB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fasong" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout><!--
</ScrollView>
-->